--- a/templates/index.html
+++ b/templates/index.html
@@ -113,7 +113,7 @@
 
 </head>
 
-<body style="background: #004643;">
+<body style="background: #004643; margin-bottom: 100px;">
   <center>
    <h1 style="color:#fffffe;">Stress level prediction</h1>
    <hr>
